# McLium

./: .editorconfig  .gitignore  CMakeLists.txt  McLium.py  Mclium.py  README.md  __init__.py  bindings.cpp  build.gradle  change_log.md  code_len.py  dev-build.sh  requirements.txt  temp.md  terminal.py
.cache/: installed.txt
.github/workflows/: c-cpp.yml  py-build.yml  py-dantic.yml  safety_check.yml  sync_repo.yml
McLiumSDK/: Flag.py  McLium.py  Path.py  SubCommand.py  Types.py  __init__.py
McLiumSDK/Packet/: PacketBuilder.py  Parser.py  ReadSocket.py  Template.py
aoko/: .gitignore  build.sh  main.cpp
aoko/codec/: encode.cpp
aoko/codecs/: __init__.py  field_encode.py
aoko/entities/: aoko_field.py  clientbound.py
aoko/enums/: packet.py
aoko/include/: encode.h  packet_api.h
aoko/protocol/: packet_crafter.py
config/: mclium_server.yml
data/: requirements.txt
docs/: Cách làm subcommand.md  how_to_make_a_plugin.md
docs/mcprotocol/: ChunkDataStructure.md  ProtocolVersion.md
docs/vietnamese/: Read This First.md
gradle/wrapper/: gradle-wrapper.properties
libraries/aiohttp-3.13.3.dist-info/: RECORD
libraries/altgraph-0.17.5.dist-info/: RECORD
libraries/cython-3.2.4.dist-info/: RECORD
mclium/: __init__.py  client.py  context.py  dev-note.txt  initialization.py  load_plugin.py  loader.py  main.py  path.py
notes/: packet_crafter_test.ipynb
research/: packet_structure.md  read_varint.py  varint.py
setting/: mclium-current.json  sum.json
src/: DataBridge.py  __init__.py  packet_api.cpp
test/: dump.mcli  import_test.py  packet_parser.py
(+99 files in other folders)
